--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
         <div class="click-area" id="area-filter-4"></div>
         <div class="click-area" id="area-filter-5"></div>
         <div class="click-area" id="area-filter-6"></div>
-        <div class="click-area" id="drop-down-1"></div>
-        <div class="click-area" id="drop-down-2"></div>
-        <div class="click-area" id="drop-down-3"></div>
-        <div class="click-area" id="drop-down-4"></div>
+        <div class="click-area" id="dropdown-1"></div>
+        <div class="click-area" id="dropdown-2"></div>
+        <div class="click-area" id="dropdown-3"></div>
+        <div class="click-area" id="dropdown-4"></div>
         <div class="click-area" id="enable-drop"></div>
         <div class="click-area" id="disable-drop"></div>
+        <div class="click-area" id="area-clear"></div>
         <div class="click-area" id="filter-exit"></div>
         <div class="click-area" id="filter-go"></div>
+
 
     </div>
     <div id="output-console">
