both tasks working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="click-area" id="area-articles-btn"></div>
         <!-- home page only -->
         <div class="click-area" id="area-articles"></div>
+        <div class="click-area" id="area-sector"></div>
         <!-- any articles page -->
         <div class="click-area" id="area-back-btn"></div>
          <!-- article unf only -->
